<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:weightSum="1">

    <!--receive area -->
    <LinearLayout
        android:id="@+id/llUp"
        android:background="@drawable/linearlayout_shape"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.3"
        android:weightSum="1">

        <EditText
            android:gravity="top"
            android:id="@+id/EditTextEmission"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:background="@color/bg_white"
            android:hint="@string/receive_hint"
            android:textColor="?android:attr/colorBackground"
            android:layout_weight="0.6"
            tools:ignore="NestedWeights">
        </EditText>

        <LinearLayout

            android:background="#FFFFFF"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            tools:ignore="ExtraText">
            >

            <Button
                android:id="@+id/BtCleanRev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean" />

            <Button
                android:id="@+id/BtSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/linearlayout_shape"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.3"
        android:weightSum="1"
        >

        <EditText
            android:background="@drawable/linearlayout_shape"
            android:gravity="top"
            android:id="@+id/EditSend"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:hint="@string/send_hint"
            android:textAlignment="viewStart"
            android:textColor="#318410"
            tools:ignore="NestedWeights"></EditText>

        <LinearLayout
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/BtSendAssic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendassic"
                />
            <Button
                android:id="@+id/BtSendHex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendhex"
                />
            <Button
                android:id="@+id/BtCleanSed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean" />


        </LinearLayout>

    </LinearLayout>





</LinearLayout>
